gagan changes with asteroid, text alignment fixes

--- a/src/components/about/section-four/section-four.module.css
+++ b/src/components/about/section-four/section-four.module.css
@@ -47,7 +47,7 @@
     }
 
     .text {
-        padding-top: 250px;
+        padding-top: 200px;
         font-size: 15px;
     }
 
